# chatellite

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  pyproject.toml
frontend/: 25-substitute-app-vars.sh
frontend/export/: about.html  index.html
frontend/export/assets/css/: Navigation-Clean.css
frontend/export/assets/js/: chat-app.js
locator/: ai.py  api.py  geo.py  logger.py  space.py
tests/: test_geo.py
tests/fixtures/: ICEYE-X7-46496.tle
